# gravisynth

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  build_log.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: asan.yml  build-artifacts.yml  ci.yml  cmake.yml
Source/: AudioEngine.cpp  AudioEngine.h  GravisynthUndoManager.cpp  GravisynthUndoManager.h  IGraphManager.h  Main.cpp  MainComponent.cpp  MainComponent.h  PresetManager.cpp  PresetManager.h  ShortcutManager.h
Source/AI/: AIIntegrationService.cpp  AIIntegrationService.h  AIProvider.h  AIStateMapper.cpp  AIStateMapper.h  OllamaProvider.cpp  OllamaProvider.h
Source/Modules/: ADSRModule.h  AttenuverterModule.h  ExternalMidiModule.h  FilterModule.h  LFOModule.h  MidiKeyboardModule.h  ModuleBase.h  OscillatorModule.h  PolyMidiModule.h  PolySequencerModule.h  SequencerModule.h  VCAModule.h  VisualBuffer.h  VoiceMixerModule.h
Source/Modules/FX/: ChorusModule.h  CompressorModule.h  DelayModule.h  DistortionModule.h  FlangerModule.h  LimiterModule.h  PhaserModule.h  ReverbModule.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: AIChatComponent.cpp  AIChatComponent.h  FrequencyResponseComponent.h  GraphEditor.cpp  GraphEditor.h  ModMatrixComponent.cpp  ModMatrixComponent.h  ModuleComponent.cpp  ModuleComponent.h  ModuleLibraryComponent.h  ScopeComponent.h  SettingsWindow.cpp  SettingsWindow.h
Tests/: ADSRTests.cpp  AIChatComponentTests.cpp  AIIntegrationServiceTests.cpp  AIStateMapperTests.cpp  AntiClickTests.cpp  AttenuverterTests.cpp  AudioRenderingTests.cpp  CMakeLists.txt  DistortionSweepTests.cpp  E2EWorkflowTests.cpp  EdgeCaseTests.cpp  FXModuleTests.cpp  FilterTests.cpp  GraphEditorTests.cpp  IntegrationTests.cpp  LFOModuleTests.cpp  MainComponentTests.cpp  MidiKeyboardModuleTests.cpp  ModMatrixTests.cpp  ModuleBaseTests.cpp  ModuleBypassTests.cpp  ModuleComponentTests.cpp  OllamaProviderTests.cpp  OscillatorCVModulationTests.cpp  OscillatorTests.cpp  PluginProcessorTests.cpp  PolyMidiModuleTests.cpp  PolySequencerModuleTests.cpp  PresetManagerTests.cpp  SequencerModuleTests.cpp  SettingsWindowTests.cpp  ShortcutManagerTests.cpp  TestAudioHelpers.h  TestMain.cpp  UndoRedoTests.cpp  VCAModuleTests.cpp  VisualBufferTests.cpp  VisualSignalFlowTests.cpp  VoiceMixerModuleTests.cpp  WorkflowTests.cpp
Tests/reference/: chain_osc_filter_vca.raw  filter_lpf_500hz.raw  mod_adsr_vca_envelope.raw  mod_full_patch_modulation.raw  mod_lfo_filter_cutoff.raw  mod_lfo_osc_pitch.raw  osc_saw_c4.raw
build-rel-test/: Makefile
build-rel-test/GravisynthPlugin_artefacts/JuceLibraryCode/GravisynthPlugin_AU/: Info.plist
build-rel-test/GravisynthPlugin_artefacts/JuceLibraryCode/GravisynthPlugin_VST3/: Info.plist
build-rel-test/GravisynthPlugin_artefacts/Release/AU/Gravisynth.component/Contents/: Info.plist
build-rel-test/GravisynthPlugin_artefacts/Release/VST3/Gravisynth.vst3/Contents/: Info.plist
build-rel-test/Gravisynth_artefacts/JuceLibraryCode/Gravisynth/: Info.plist
build-rel-test/Tests/: CTestTestfile.cmake  GravisynthTests[1]_include.cmake  GravisynthTests[1]_tests.cmake  Makefile  cmake_test_discovery_0e2c29912f.json
build-release/: Makefile
build-release/Gravisynth_artefacts/JuceLibraryCode/: JuceHeader.h
build-release/Tests/: CTestTestfile.cmake  GravisynthTests[1]_include.cmake  GravisynthTests[1]_tests.cmake  Makefile  cmake_test_discovery_0e2c29912f.json
conductor/: add-distortion-types.md  external-midi-module-plan.md  midi-input-plan.md  plan.md
docs/: AI_Engine.md  AI_Usage_Guide.md  Module_Development_Guide.md  architecture.md  fx_modules.md  midi_input.md  modules.md  testing.md
scripts/: coverage.sh  install-hooks.sh  play-reference.sh  pre-push-release-test.sh  update-reference.sh
